Update hero slider and layout

--- a/index.html
+++ b/index.html
@@ -1,91 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mountvert | Engineering & Equipment Solutions</title>
-
-    <!-- Main CSS -->
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <title>Mountvert | Engineering & Equipment</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<script src="js/main.js"></script>
-
 <body>
 
-    <!-- ================= HEADER ================= -->
-    <header class="site-header">
-        <div class="container header-container">
-            <div class="logo">
-                <span>Mountvert</span>
-            </div>
+<!-- ================= HEADER ================= -->
+<header class="site-header">
+  <div class="container header-container">
+    <div class="logo">Mountvert</div>
+    <nav class="main-nav">
+      <ul>
+        <li><a class="active" href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Our Offices</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Our Offices</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+<!-- ================= HERO ================= -->
+<section class="hero">
 
-    <section class="hero">
-        <!-- HERO TABS -->
-        <div class="hero-tabs">
-            <button class="hero-tab active" data-type="products">Products</button>
-            <button class="hero-tab" data-type="services">Services</button>
-        </div>
+  <!-- Tabs -->
+  <div class="hero-tabs">
+    <button class="hero-tab active">Products</button>
+    <button class="hero-tab">Services</button>
+  </div>
 
-        <!-- HERO CONTENT -->
-        <div class="hero-content">
-            <h1>Engineering & Equipment Solutions for Industry</h1>
-            <p>
-                Delivering reliable engineering design, mechanical and electrical equipment
-                solutions for modern industrial projects.
-            </p>
-            <a href="#offerings" class="btn-primary">Explore Our Offerings</a>
-        </div>
-    </section>
+  <div class="hero-wrapper">
 
+    <!-- LEFT TEXT -->
+    <div class="hero-content">
+      <h1 id="hero-title">
+        Engineering & Equipment Solutions for Industry
+      </h1>
+      <p>
+        Delivering reliable engineering, equipment, and automation
+        solutions for modern industrial projects.
+      </p>
+      <a href="#" class="hero-btn">Explore Our Offerings</a>
+    </div>
 
-    <section class="offerings" id="offerings">
-        <div class="container">
-            <h2 class="section-title">Our Offerings</h2>
+    <!-- RIGHT CARDS -->
+    <div class="hero-cards">
+      <div class="offering-card">
+        <h3>Engineering Design</h3>
+        <p>SPM, piping, structural & automation-driven engineering.</p>
+        <span>Explore →</span>
+      </div>
 
-            <div class="offerings-grid">
+      <div class="offering-card">
+        <h3>Mechanical Equipments</h3>
+        <p>Valves, pumps, skids & custom assemblies.</p>
+        <span>Explore →</span>
+      </div>
 
-                <a href="engineering.html" class="offering-card">
-                    <h3>Engineering Design</h3>
-                    <p>Special Purpose Machines, piping design, and automation-driven engineering services..</p>
-                    <span>Explore →</span>
-                </a>
+      <div class="offering-card">
+        <h3>Electrical Equipments</h3>
+        <p>Panels, switchgear & instrumentation systems.</p>
+        <span>Explore →</span>
+      </div>
+    </div>
 
-                <a href="mechanical.html" class="offering-card">
-                    <h3>Mechanical Equipments</h3>
-                    <p>Valves, pumps, skids and customized mechanical assemblies.</p>
-                    <span>Explore →</span>
-                </a>
+  </div>
+</section>
 
-                <a href="electrical.html" class="offering-card">
-                    <h3>Electrical Equipments</h3>
-                    <p>Panels, switchgear, instrumentation and electrical systems.</p>
-                    <span>Explore →</span>
-                </a>
-
-            </div>
-        </div>
-    </section>
-
-
-    <!-- ================= FOOTER ================= -->
-    <footer class="site-footer">
-        <div class="container">
-            <p>© 2026 Mountvert. All Rights Reserved.</p>
-        </div>
-    </footer>
-
+<script src="js/main.js"></script>
 </body>
-
 </html>
